syntax = "proto3";

import "google/protobuf/timestamp.proto";

package proto;

option go_package="/api/proto";

service Store {
  rpc GetLastEventID (GetLastEventIDRequest) returns (GetLastEventIDReply) {}
  rpc GetEvents (GetEventsRequest) returns (GetEventsReply) {}
}

message GetLastEventIDRequest {
  int64 trailing_lag = 1;
  Filter filter = 2;
}

message GetLastEventIDReply {
  string event_id = 1;
}

message GetEventsRequest {
  string after_event_id = 1;
  int32 limit = 2;
  int64 trailing_lag = 3;
  Filter filter = 4;
}

message Filter {
  repeated string aggregate_types = 1;
  repeated Metadata metadata = 2;
  uint32 partitions = 3;
  uint32 partitionLow = 4;
  uint32 partitionHi = 5;
}

message Metadata {
  string key = 1;
  string value = 2;
}

message GetEventsReply {
  repeated Event events = 1;
}

message Event {
	string id = 1;
	string aggregate_id = 2;
	uint32 aggregate_version = 3;
	uint32 aggregate_id_hash = 4;
	string aggregate_type = 5;
	string kind = 6;
	bytes body = 7;
	string idempotency_key = 8;
	string metadata = 9;
	google.protobuf.Timestamp created_at = 10;
}
